# cpp-serializer

./: .clangd  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  README.md  vcpkg.json
cmake/: docs.cmake  install-config.cmake  install-rules.cmake  source-tree.cmake  spell.cmake  variables.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt  reflow.cpp
include/cpp-serializer/: concepts.hpp  config.hpp  cpp-serializer.hpp  data-concepts.hpp  data-helper.hpp  data.hpp  dir.cmake  ini.hpp  location.hpp  macros.hpp  source.hpp  target.hpp  tmp.hpp  txt-helper.hpp  txt.helper.hpp  txt.hpp  types.h  unmacro.hpp  utf.hpp
include/darkgaze/yaml/: lib.h
source/: cpp-serializer.cpp
src/: lib.cpp
test/: CMakeLists.txt  libtest.cpp
test/source/: cpp-serializer_test.cpp
